<resources>
    <string name="app_name">Record</string>
    <string name="record_title_hint">input record title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_detail_hint">input record detail</string>
    <string name="record_title_lable">Title</string>
    <string name="record_detail_lable">Detail</string>
    <string name="record_solved_label">Solved</string>
    <string name="records_title">Records</string>
    <string name="date_picker_title">Date of Record</string>
    <string name="time_picker_title">Time</string>
    <string name="new_record">New Record</string>
    <string name="delete_record">Delete Record</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something,you say something.</string>
    <string name="list_fragment_empty_text">empty</string>
    <string name="data_file_name">record.json</string>
    <string name="data_save_success">data saved successfully!</string>
    <string name="data_save_fail">data saved fail</string>
    <string name="take">Take!</string>
    <string name="delete_photo1">Delete Photo1</string>
    <string name="delete_photo3">Delete Photo3</string>
    <string name="delete_photo2">Delete Photo2</string>
    <string name="record_linkman_text">Choose Linkman</string>
    <string name="record_report_text">Send Record Report</string>
    <string name="record_report">%1$s!%2$s.The record was recorded on %3$s.%4$s,and %5$s</string>
    <string name="record_report_solved">The record is solved</string>
    <string name="record_report_unsolved">The record is not solved</string>
    <string name="record_report_no_linkman">There is no linkman</string>
    <string name="record_report_linkman">The linkman is %s</string>
    <string name="record_report_subject">Record Report</string>
    <string name="send_report">Send record report</string>
    <string name="record_call">Call</string>


</resources>
