<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_title_lable"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/record_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/record_title_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_detail_lable"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/record_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/record_detail_hint"/>
    <Button
        android:id="@+id/record_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/record_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/record_solved_label"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_linkman_text"
            android:id="@+id/record_linkman_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_report_text"
            android:id="@+id/record_report_button"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_call"
        android:id="@+id/record_call_button"/>
    <ImageButton
        android:id="@+id/record1_imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/record_photo1_imageView"
        android:scaleType="centerInside"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"/>
    <ImageButton
        android:id="@+id/record2_imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/record_photo2_imageView"
        android:scaleType="centerInside"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"/>
    <ImageButton
        android:id="@+id/record3_imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/record_photo3_imageView"
        android:scaleType="centerInside"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"/>

</LinearLayout>
    </ScrollView>
